--- a/src/hf_utils/package.xml
+++ b/src/hf_utils/package.xml
@@ -11,6 +11,7 @@
   <depend>image_transport</depend>
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
+  <depend>id2label_mapper_services</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
