--- a/src/id2label_mapper/package.xml
+++ b/src/id2label_mapper/package.xml
@@ -8,6 +8,7 @@
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
@@ -22,12 +23,13 @@
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
-
+  <test_depend>ament_cmake_pytest</test_depend>
+  <test_depend>launch_testing</test_depend>
 
   <!-- For building custom srv -->
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
-  <member_of_group>rosidl_interface_packages</member_of_group>
+  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->
+  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
+  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
 
   <!-- Add .srv files as exec depend -->
   <!-- <exec_depend>id2label_mapper_services</exec_depend> -->
